File structure & deisgn fix & https

--- a/src/Assets/css/Intro.module.css
+++ b/src/Assets/css/Intro.module.css
@@ -1,9 +1,8 @@
 .textContainer {
-  display: block;
+  position: relative;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 20%;
-  margin-bottom: 0;
+  top: 10%;
 }
 
 .textContainer > p {
@@ -11,22 +10,29 @@
   text-align: center;
   line-height: 1.8em;
   font-size: 2em;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
+}
+
+.logo {
+  position: relative;
+  top: 18%;
 }
 
 .logo > img {
-  margin-top: 20%;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 40%;
+  width: 50%;
+}
+
+.logo_btn {
+  position: fixed;
+  bottom: 15%;
 }
 
 .logo_btn img {
   display: block;
-  margin-top: 55%;
+  width: 85%;
   margin-left: auto;
   margin-right: auto;
-  width: 85%;
 }
